--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -26,16 +26,27 @@
     line-height: 1.2em;
     letter-spacing: .23em;
     //ALWAYS has a box around it !!
-    padding:.53em .62em .57em .8em; 
+    padding: .53em .62em .57em .8em;
+    border-style: solid;
+    border-width: .08em;
+}
+.menu-text {
+    font-family: Pitch;
+    font-weight: 900;
+    font-size: 1.5em;
+    line-height: 1.2em;
+    letter-spacing: .23em;
+    //ALWAYS has a box around it !!
+    padding: .53em .62em .57em .8em;
     border-style: solid;
     border-width: .08em;
 }
 //colors to be added as classes
 .blue {
     color: $blue;
-    background:white;
+    background: white;
 }
 .red {
     color: $blue;
-    background:white;
+    background: white;
 }
